rs/macros/core/tests/snapshots/gservice__works_with_extends_and_lifetimes.snap
---
source: rs/macros/core/tests/gservice.rs
expression: result
---
pub struct ExtendedLifetimeExposure<T> {
    route_idx: u8,
    inner: T,
}
impl<T: sails::meta::ServiceMeta> sails::gstd::services::Exposure
for ExtendedLifetimeExposure<T> {
    fn interface_id() -> sails::meta::InterfaceId {
        <T as sails::meta::Identifiable>::INTERFACE_ID
    }
    fn route_idx(&self) -> u8 {
        self.route_idx
    }
    fn check_asyncness(
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
    ) -> Option<bool> {
        if !T::ASYNC {
            return Some(false);
        }
        match (interface_id, entry_id) {
            (id, 0u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (id, 1u16) if id == <T as sails::meta::Identifiable>::INTERFACE_ID => {
                Some(false)
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &T::BASE_SERVICES[0usize],
                id,
            ) => {
                return <<base::BaseLifetime as sails::gstd::services::Service>::Exposure as sails::gstd::services::Exposure>::check_asyncness(
                    id,
                    eid,
                );
            }
            _ => None,
        }
    }
}
impl<T> core::ops::Deref for ExtendedLifetimeExposure<T> {
    type Target = T;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl<T> core::ops::DerefMut for ExtendedLifetimeExposure<T> {
    fn deref_mut(&mut self) -> &mut Self::Target {
        &mut self.inner
    }
}
#[allow(clippy::from_over_into)]
impl<'a> Into<base::BaseLifetime<'a>>
for ExtendedLifetimeExposure<ExtendedLifetime<'a>> {
    fn into(self) -> base::BaseLifetime<'a> {
        self.inner.into()
    }
}
impl<'a> ExtendedLifetimeExposure<ExtendedLifetime<'a>> {
    #[export]
    pub fn extended_name(&self) -> String {
        "extended-name".to_string()
    }
    #[export]
    pub fn name(&self) -> String {
        "extended".to_string()
    }
    pub fn try_handle(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                0u16,
            ) if id
                == <self::ExtendedLifetime<
                    'a,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: extended_lifetime_meta::__ExtendedNameParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.extended_name();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<String>() {
                    sails::gstd::encode_invocation_payload::<
                        extended_lifetime_meta::__ExtendedNameParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                1u16,
            ) if id
                == <self::ExtendedLifetime<
                    'a,
                > as sails::meta::Identifiable>::INTERFACE_ID => {
                let request: extended_lifetime_meta::__NameParams = sails::scale_codec::DecodeAll::decode_all(
                        &mut input,
                    )
                    .expect("Failed to decode params");
                let result = self.name();
                let value = 0u128;
                if !sails::gstd::is_empty_tuple::<String>() {
                    sails::gstd::encode_invocation_payload::<
                        extended_lifetime_meta::__NameParams,
                        _,
                        _,
                    >(
                        &result,
                        self.route_idx,
                        |encoded_result| result_handler(encoded_result, value),
                    );
                } else if false && value > 0 {
                    result_handler(&[], value);
                }
                return Some(());
            }
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::ExtendedLifetime<
                    'a,
                > as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: base::BaseLifetime<'a> = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle(interface_id, entry_id, input, result_handler);
            }
            _ => None,
        }
    }
    pub async fn try_handle_async(
        mut self,
        interface_id: sails::meta::InterfaceId,
        entry_id: u16,
        mut input: &[u8],
        result_handler: fn(&[u8], u128),
    ) -> Option<()> {
        use sails::gstd::CommandReply;
        match (interface_id, entry_id) {
            (
                id,
                eid,
            ) if sails::meta::service_has_interface_id(
                &<self::ExtendedLifetime<
                    'a,
                > as sails::meta::ServiceMeta>::BASE_SERVICES[0usize],
                id,
            ) => {
                let base_service: base::BaseLifetime<'a> = self.inner.into();
                return sails::gstd::services::Service::expose(
                        base_service,
                        self.route_idx,
                    )
                    .try_handle_async(interface_id, entry_id, input, result_handler)
                    .await;
            }
            _ => None,
        }
    }
}
impl<'a> sails::gstd::services::Service for ExtendedLifetime<'a> {
    type Exposure = ExtendedLifetimeExposure<Self>;
    fn expose(self, route_idx: u8) -> Self::Exposure {
        Self::Exposure {
            route_idx,
            inner: self,
        }
    }
}
mod extended_lifetime_meta {
    use super::*;
    const __INTERFACE_ID: sails::meta::InterfaceId = {
        let mut final_hash = sails::keccak_const::Keccak256::new();
        final_hash = final_hash.update(&sails::hash_fn!(query ExtendedName() -> String));
        final_hash = final_hash.update(&sails::hash_fn!(query Name() -> String));
        final_hash = final_hash
            .update(
                &<super::base::BaseLifetime as sails::meta::Identifiable>::INTERFACE_ID.0,
            );
        let hash = final_hash.finalize();
        sails::meta::InterfaceId::from_bytes_32(hash)
    };
    impl<'a> sails::meta::Identifiable for super::ExtendedLifetime<'a> {
        const INTERFACE_ID: sails::meta::InterfaceId = __INTERFACE_ID;
    }
    impl<'a> sails::meta::ServiceMeta for super::ExtendedLifetime<'a> {
        type CommandsMeta = CommandsMeta;
        type QueriesMeta = QueriesMeta;
        type EventsMeta = EventsMeta;
        const BASE_SERVICES: &'static [sails::meta::BaseServiceMeta] = &[
            sails::meta::BaseServiceMeta::new::<
                super::base::BaseLifetime,
            >("BaseLifetime"),
        ];
        const METHODS: &'static [sails::meta::MethodMetadata] = &[
            sails::meta::MethodMetadata {
                name: "ExtendedName",
                entry_id: 0u16,
                hash: sails::hash_fn!(query ExtendedName() -> String),
                is_async: false,
            },
            sails::meta::MethodMetadata {
                name: "Name",
                entry_id: 1u16,
                hash: sails::hash_fn!(query Name() -> String),
                is_async: false,
            },
        ];
        const ASYNC: bool = <super::base::BaseLifetime as sails::meta::ServiceMeta>::ASYNC;
    }
    sails::invocation_io!(
        pub struct __ExtendedNameParams {}, interface_id = __INTERFACE_ID, entry_id =
        0u16,
    );
    sails::invocation_io!(
        pub struct __NameParams {}, interface_id = __INTERFACE_ID, entry_id = 1u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum CommandsMeta {}
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum QueriesMeta {
        ExtendedName(__ExtendedNameParams, String),
        Name(__NameParams, String),
    }
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
